# Margaret

./: Cargo.toml  README.md
crates/margaret-cli/src/: lib.rs  main.rs
crates/margaret-core/src/: camera.rs  color.rs  image.rs  lib.rs  material.rs  math.rs  ray.rs  render.rs  scene.rs
crates/margaret-cpu/: Cargo.toml
crates/margaret-cpu/src/: lib.rs
crates/margaret-image/src/: lib.rs
crates/margaret-testutil/src/: lib.rs
docs/: architecture.md  dev-setup.md  milestones.md
primer/: vulkan-primer.md
